<resources>
    <string name="app_name">Киноэксперт</string>
    <string name="movies_all">Все фильмы</string>
    <string name="movies_favorite">Избранное</string>
    <string name="movies_popular">Тренды</string>
    <string name="movies_best">Лучшие</string>
    <string name="error_loading_movies">Ошибка загрузки списка фильмов!</string>
    <string name="movie_picture">Фотография фильма</string>
    <string name="search">Поиск</string>
    <string name="movies_genres">Жанры</string>
    <string name="all_genres">Все жанры</string>
    <string name="title">Название:</string>
    <string name="release_date">Релиз:</string>
    <string name="rating">Рейтинг:</string>
    <string name="add_to_favorites_icon">Иконка добавления в избранное</string>
    <string name="button_back">Кнопка назад</string>
    <string name="error_cannot_load_movie_details">Ошибка загрузки информации о фильме</string>
    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="removed_from_favorites">Удалено из избранного</string>
    <string name="logo_of_imdb">Логотип IMDB</string>
    <string name="source">Источник:</string>
    <string name="input_movie_title">Введите название фильма</string>
    <string name="error_search">Ошибка поиска!</string>
    <string name="movies_not_found">Фильмы не найдены</string>
    <string name="button_search">Кнопка поиска</string>
    <string name="movies_new">Новые</string>
    <string name="genres">Жанры:</string>
    <string name="no_favorites">Здесь пока ничего нет</string>
    <string name="similar_movies">Похожие фильмы:</string>
    <string name="error_loading_similar_movies">Ошибка загрузки списка похожих фильмов!</string>
    <string name="similar_movies_not_found">Фильмы не найдены</string>
    <string name="disable_all_ads">Отключить всю рекламу раз и навсегда!</string>
    <string name="disable_ads">Отключить рекламу</string>
    <string name="disclaimer">При нажатии на кнопку с вас спишется %s за отключение всей рекламы в приложении</string>

    <string name="admob_id">ca-app-pub-8259637400124007~6527750917</string>
    <string name="banner_id">ca-app-pub-8259637400124007/6144607536</string>
</resources>