<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/medium_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.details.MovieDetailsActivity"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movie_details_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/movie_picture_holder"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_picture"
                app:layout_constraintDimensionRatio="H,2:3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movie_details_back"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/back"
                android:contentDescription="@string/button_back"
                app:layout_constraintTop_toTopOf="@id/movie_details_image"
                app:layout_constraintBottom_toTopOf="@id/movie_details_image"
                app:layout_constraintStart_toStartOf="@id/movie_details_image"
                app:layout_constraintEnd_toStartOf="@id/movie_details_image"/>

            <ImageView
                android:id="@+id/movie_details_star"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/star_not_favorite"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/add_to_favorites_icon"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_image"
                app:layout_constraintBottom_toBottomOf="@+id/movie_details_image"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/movie_details_title"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/title"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"/>

            <TextView
                android:id="@+id/movie_details_date"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/release_date"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_title_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"/>

            <TextView
                android:id="@+id/movie_details_rating"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/rating"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_date_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"/>

            <TextView
                android:id="@+id/movie_details_genres"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/genres"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"/>

            <TextView
                android:id="@+id/movie_details_title_edit"
                style="@style/TextViewMovieInfoStyleEdit"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_image"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/movie_details_date_edit"
                style="@style/TextViewMovieInfoStyleEdit"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_title_edit"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/movie_details_rating_edit"
                style="@style/TextViewMovieInfoStyleEdit"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_date_edit"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/movie_details_genres_edit"
                style="@style/TextViewMovieInfoStyleEdit"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_rating_edit"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/movie_details_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/dark_blue"
                app:layout_constraintTop_toBottomOf="@id/movie_details_genres"/>

            <TextView
                android:id="@+id/movie_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewMovieInfoStyleEdit"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/movie_details_line"/>

            <View
                android:id="@+id/movie_details_line_middle"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/dark_blue"
                app:layout_constraintTop_toBottomOf="@id/movie_details_description"/>

            <TextView
                android:id="@+id/text_view_similar_movies"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/similar_movies"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_line_middle"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_similar_movies"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_similar_movies"/>


            <ProgressBar
                android:id="@+id/similar_movies_progress_bar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/recycler_view_similar_movies"
                app:layout_constraintBottom_toBottomOf="@id/recycler_view_similar_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/movie_details_line_bottom"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/dark_blue"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_similar_movies"/>

            <ImageView
                android:id="@+id/imdb_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/imdb_logo"
                android:contentDescription="@string/logo_of_imdb"
                app:layout_constraintTop_toBottomOf="@id/movie_details_line_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/movie_details_source"
                style="@style/TextViewMovieInfoStyle"
                android:text="@string/source"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_line_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/movie_details_progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_marginTop="@dimen/progress_bar_margin_top"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/light_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>