<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/grey"
        android:hint="@string/input_movie_title"
        android:textColorHint="@color/transparent_grey"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:imeOptions="actionDone"
        app:backgroundTint="@color/light_blue"
        app:background="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_search"/>

    <ImageView
        android:id="@+id/button_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_search"
        android:src="@drawable/button_search"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/edit_search"
        app:layout_constraintStart_toEndOf="@id/edit_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/edit_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_recycler_movies_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/edit_search"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar_search"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/light_blue"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_movie_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_not_found"
        android:layout_marginTop="@dimen/progress_bar_margin_top"
        android:visibility="invisible"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>